# ShinyQ-Dev

./: .env.example  .gitignore  docker-compose.yml  setup-ssl.sh
.agent/: caloriq-ai-nutrition-pipeline.md
.claude/: launch.json
.github/workflows/: deploy.yml
CalorIQ/backend/: .env.example  alembic.ini  requirements.txt
CalorIQ/frontend/: Dockerfile  (+3 more)
ShinyQ/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts
ShinyQ-Dashboard/: .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
ShinyQ-Dashboard/services/api/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
ShinyQ-Dashboard/services/api/app/: __init__.py
ShinyQ-Dashboard/services/api/app/api/: deps.py  health.py
ShinyQ-Dashboard/services/api/app/api/v1/: blogs.py  galleries.py  hello.py  items.py  projects.py  router.py  settings.py  tech_stack.py  timeline.py
ShinyQ-Dashboard/services/api/app/core/: config.py  database.py  security.py
ShinyQ-Dashboard/services/api/app/models/: __init__.py  portfolio.py
ShinyQ-Dashboard/services/api/app/repositories/: __init__.py  base.py
ShinyQ-Dashboard/services/api/app/schemas/: __init__.py  common.py  portfolio.py
ShinyQ-Dashboard/services/api/app/services/: __init__.py  hello_service.py
ShinyQ-Dashboard/services/api/migrations/: env.py
ShinyQ-Dashboard/services/api/migrations/versions/: 1ae425cb21b0_initial_schema.py  c582a04d7a58_add_project_galleries.py
scripts/: backup-db.sh
(+235 files in other folders)
